[package]
name = "hcmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
cuid = "1.3.3"
ratatui = "0.30.0"
crossterm = "0.29.0"

